--- a/layout/level 1/index.html
+++ b/layout/level 1/index.html
@@ -10,42 +10,41 @@
 </head>
 <body>
   <div class="wrapper">
-    <header>
+    <header class="b-nav">
       <nav>
-        <div class="logo">
-          worona
-        </div>
-        <ul>
-          <li>publish</li>
-          <li>extensions</li>
-          <li>blog</li>
-          <li>contact</li>
-        </ul>
+        <a class="logo" href="#">worona</a>
+    		<ul>
+    			<li><a href="#">publish</a></li>
+    			<li><a href="#">extensions</a></li>
+    			<li><a href="">blog</a></li>
+    			<li><a href="">contact</a></li>
+    		</ul>
+    		<div class="btn-mob"></div>
       </nav>
     </header>
-    <section>
+    <section class="b-content">
       <header>
         <h1 class="h1">Turn your WordPress into an App</h1>
       </header>
-      <div class="">
-        <h2 class="h2">Check out our demo app!</h2>
-        <span class="">
-          <button type="button" name="button">
-            <img src="src/assets/app-store.png" alt="">
-          </button>
-          <button type="button" name="button">
-            <img src="src/assets/google-play.png" alt="">
-          </button>
-        </span>
-      </div>
+      <h2 class="h2">Check out our demo app!</h2>
+      <span>
+        <button type="button" name="button">
+          <img src="src/assets/app-store.png" alt="">
+        </button>
+        <button type="button" name="button">
+          <img src="src/assets/google-play.png" alt="">
+        </button>
+      </span>
     </section>
-    <footer>
-      <figure>
-        <img src="src/assets/nexus.png" alt="">
-      </figure>
-      <figure>
-        <img src="src/assets/iphone.png" alt="">
-      </figure>
+    <footer class="b-footer">
+      <span>
+        <figure>
+          <img src="src/assets/nexus.png" alt="">
+        </figure>
+        <figure>
+          <img src="src/assets/iphone.png" alt="">
+        </figure>
+      </span>
     </footer>
   </div>
 
