--- a/layout/level 1/src/css/sass/colors.scss
+++ b/layout/level 1/src/css/sass/colors.scss
@@ -10,11 +10,5 @@ $grey-5: #080910;
 $grey-6: #404040;
 
 
-$primary-1: #fed41c;
-$primary-1-1: #caa000;
-$primary-2: #00A63F;
-$primary-3: #3F41B2;
-$primary-3-1: #9B9DFF;
-
-
-$alert-1: #FF0200;
+$primary-corp: #5dbadf;
+$secondary-corp: #66c3ca;
