--- a/layout/level 1/src/css/sass/custom.scss
+++ b/layout/level 1/src/css/sass/custom.scss
@@ -10,8 +10,16 @@ html,body{
   margin: 0;
   padding: 0;
 }
+
 body {
   font-family: $primary-font;
+  color: $white;
+  letter-spacing: 1px;
+  background: $primary-corp;
+  background: -moz-linear-gradient(-45deg, $primary-corp 0%, $secondary-corp 100%);
+  background: -webkit-linear-gradient(-45deg, $primary-corp 0%,$secondary-corp 100%);
+  background: linear-gradient(135deg, $primary-corp 0%,$secondary-corp 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$primary-corp', endColorstr='$secondary-corp',GradientType=1 );
 }
 button {
   border: none;
@@ -19,8 +27,31 @@ button {
   transition: all 0.3s ease;
 }
 a {
+  color: $white;
   transition: all 0.3s ease;
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
+}
+button {
+  cursor: pointer;
 }
 div {
   transition: all 0.3s ease;
 }
+
+.wrapper {
+  max-width: 960px;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  overflow: hidden;
+}
+
+
+
+
+//@media (max-width: $screen-md) {}
